<resources>
    <string name="app_name">Fiftygram</string>
    <string name="pixelation">Pixelation</string>
    <string name="sketch">Sketch</string>
    <string name="invert">Invert</string>
    <string name="contrast">Contrast</string>
    <string name="sepia">Sepia</string>
    <string name="toon">Toon</string>
    <string name="choose_photo">Choose photo</string>
    <string name="image_to_be_filtered">Image to be filtered</string>
    <string name="save_photo">Save Photo</string>
</resources>
